WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/Competitor_Account__c.object-meta.xml
<CustomObject>
    <label>Competitor/Account</label>
    <nameField>
        <displayFormat>CAccounts - {0000}</displayFormat>
        <label>Competitor/Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors/Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>