WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>