WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Advantage_1__c.field-meta.xml
<CustomField>
    <fullName>Advantage_1__c</fullName>
    <formula>Competitor__r.Strength_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advantage 1)</label>
    <type>Text</type>
</CustomField>