WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Advantage_2__c.field-meta.xml
<CustomField>
    <fullName>Advantage_2__c</fullName>
    <formula>Competitor__r.Strength_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advantage 2)</label>
    <type>Text</type>
</CustomField>