WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Advantage_3__c.field-meta.xml
<CustomField>
    <fullName>Advantage_3__c</fullName>
    <formula>Competitor__r.Strength_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advantage 3)</label>
    <type>Text</type>
</CustomField>