WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Competitors_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>