WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Disadvantage_1__c.field-meta.xml
<CustomField>
    <fullName>Disadvantage_1__c</fullName>
    <formula>Competitor__r.Weakness_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disadvantage 1)</label>
    <type>Text</type>
</CustomField>