WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Disadvantage_2__c.field-meta.xml
<CustomField>
    <fullName>Disadvantage_2__c</fullName>
    <formula>Competitor__r.Weakness_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disadvantage 2)</label>
    <type>Text</type>
</CustomField>