WexGit/Wex_DX/force-app/main/default/objects/Competitor_Account__c/fields/Disadvantage_3__c.field-meta.xml
<CustomField>
    <fullName>Disadvantage_3__c</fullName>
    <formula>Competitor__r.Weakness_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disadvantage 3)</label>
    <type>Text</type>
</CustomField>